# Praktikum

./: .gitignore  CMakeLists.txt  CodeStyle.xml  README.md  constants.h  gitignore  interaction.c  interaction.h  keyValStore.c  keyValStore.h  main.c  shared.c  shared.h  store.c  store.h  sub.c  sub.h  userInteraction.c  userInteraction.h
